--- a/css/payment-methods.css
+++ b/css/payment-methods.css
@@ -36,3 +36,36 @@ input[type="radio"] {
 .hidden {
   display: none;
 }
+
+fieldset {
+  margin: 5px 0 0 40px;
+  padding: 30px 0 15px 0;
+  display: block;
+  width: 360px;
+  position: relative;
+  top: -27px;
+  left: -30px;
+  z-index: -1;
+  background: #f1f1ff;
+  -moz-border-radius: 30px;
+  border: 0px;
+}
+
+fieldset label {
+  clear: left;
+  display: inline-block;
+  text-align: right;
+  width: 90px;
+  margin: 0 0 0 5px;
+}
+
+fieldset input {
+  clear: right;
+  display: inline-block;
+  width: 250px;
+  margin: 10px 0 0 10px;
+  margin-left: 10px;
+  border: solid 1px #b3b3b3;
+  border-bottom: solid 2px #b3b3b3;
+  border-right: solid 2px #b3b3b3;
+}
