--- a/css/payment-methods.css
+++ b/css/payment-methods.css
@@ -21,6 +21,9 @@ label.for_radio {
   clear: right;
   width: 200px;
   -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  position: relative;
+  z-index: 2;
 }
 
 label.for_radio:hover {
@@ -37,7 +40,7 @@ input[type="radio"] {
   display: none;
 }
 
-fieldset {
+fieldset#fields_for_credit_card {
   margin: 5px 0 0 40px;
   padding: 30px 0 15px 0;
   display: block;
@@ -45,13 +48,14 @@ fieldset {
   position: relative;
   top: -27px;
   left: -30px;
-  z-index: -1;
   background: #f1f1ff;
   -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
   border: 0px;
+  z-index: 1;
 }
 
-fieldset label {
+fieldset#fields_for_credit_card label {
   clear: left;
   display: inline-block;
   text-align: right;
@@ -60,12 +64,52 @@ fieldset label {
 }
 
 fieldset input {
-  clear: right;
-  display: inline-block;
-  width: 250px;
-  margin: 10px 0 0 10px;
-  margin-left: 10px;
   border: solid 1px #b3b3b3;
   border-bottom: solid 2px #b3b3b3;
   border-right: solid 2px #b3b3b3;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  position: relative;
+  top: -2px;
+  padding: 3px;
+}
+
+fieldset#fields_for_credit_card input {
+  clear: right;
+  display: inline-block;
+  width: 230px;
+  margin: 10px 0 0 10px;
+}
+
+fieldset#fields_for_credit_card input[name="cvv"] {
+  width: 60px;
+}
+
+fieldset#fields_for_expiration_date {
+  display: block;
+  width: 290px;
+  margin: 5px 0 0 30px;
+  padding: 0 0 10px 0;
+  border: none;
+}
+
+fieldset#fields_for_expiration_date label {
+  width: auto;
+  margin: 5px 0 0 8px;
+  position: relative;
+  top: -29px;
+  left: 70px;
+}
+
+fieldset#fields_for_expiration_date input {
+  width: 50px;
+  margin: 10px 0 0 2px;
+  position: relative;
+  top: -29px;
+  left: 70px;
+}
+
+fieldset#fields_for_expiration_date legend {
+  display: inline-block;
+  padding: 7px 0 0 1px;
 }
