--- a/css/payment-methods.css
+++ b/css/payment-methods.css
@@ -88,28 +88,21 @@ fieldset#fields_for_credit_card input[name="cvv"] {
 fieldset#fields_for_expiration_date {
   display: inline-block;
   vertical-align: top;
-  width: 120px;
+  width: 170px;
   margin: 5px 0 0 10px;
   padding: 0 0 10px 0;
   border: none;
-  background: #e1e1ff;
 }
 
 fieldset#fields_for_expiration_date label {
   width: 40px;
-  margin: 5px 0 0 8px;
+  margin: 0px 0 4px 70px;
   text-align: right;
-  position: relative;
-  top: -29px;
-  left: 65px;
 }
 
 fieldset#fields_for_expiration_date input {
   width: 50px;
-  margin: 10px 0 0 2px;
-  position: relative;
-  top: -29px;
-  left: 65px;
+  margin: 6px 0 3px 2px;
 }
 
 fieldset#fields_for_expiration_date legend {
