--- a/js/specs/support/screw-unit/css/screw.css
+++ b/js/specs/support/screw-unit/css/screw.css
@@ -43,7 +43,10 @@ h1, h2, p {
   margin-top: 10px;
   margin-left: 0.6em;
   padding-left: 0.6em;
-  border: 1px dashed #6E6E6E;
+  border: 1px dotted #6E6E6E;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
 }
@@ -66,6 +69,9 @@ h1, h2, p {
   line-height: 1.8em;
   margin: 0 0 0.5em;
   border-bottom: 1px solid transparent;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 
 .describes .describe .its .it.enqueued h2 {
